IDEMPIERE-2999: Migrate Attribute correction from core to Logilite - Removed ValueInt & ValueTimestamp column from M_AttributeInstance  table